k8s/manifests/profilarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profilarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profilarr
  template:
    metadata:
      labels:
        app: profilarr
    spec:
      containers:
        - name: profilarr
          image: ghcr.io/dictionarry-hub/profilarr:2.0.9
          ports:
            - containerPort: 6868
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: profilarr-config
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
