k8s/manifests/profilarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profilarr
spec:
  type: LoadBalancer
  selector:
    app: profilarr
  ports:
    - port: 6868
      targetPort: 6868
